# QEMUGuardian

./: .gitignore  LICENSE  README.md  how to test it.md
Analyzer/: Readme.md  analyzer调用规范.md
Analyzer/MaliciousCode/: dirtycow.c  heartbleed  heartbleed.c  shellshock  shellshock.c
Analyzer/Scripts/: clean.sh  log.jsonl  run.py
Analyzer/Scripts/AccessControl/: AccessControl.py  access_control_trace.jsonl
Analyzer/Scripts/CodeInjection/: CodeInjection.py  command_injection_trace.jsonl
Analyzer/Scripts/ForkBomb/: ForkBomb.py  fork_bomb_trace.jsonl
Analyzer/Scripts/InformationLeakage/: InformationLeakage.py  info_leak_trace.jsonl
Analyzer/Scripts/MemoryCorruption/: MemoryCorruption.py  memory_corruption_trace.jsonl
Analyzer/Scripts/RaceCondition/: RaceCondition.py  race_condition_dirty_cow_trace.jsonl
ChromeExtension/: .reg  guardian_manifest.json  guardian_manifest.json.template  readme.md  readme_cn.md  setup.bat  setup.ps1  setup.sh
ChromeExtension/BackgroundService/: CMakeLists.txt  common.cpp  main.cpp  native_messaging.cpp  remote_scanner.cpp
ChromeExtension/BackgroundService/include/: common.h  native_messaging.h  remote_scanner.h
ChromeExtension/Extension/: background.js  manifest.json  popup.html  popup.js
MyQemuMonitor/: Dynamic QEMU-user Monitor 接口说明文档.md  monitor.bt
Program-test/: 1.cpp  demo.txt  foo.txt  fopen_test.c  simple_app.c
Program-test/c-reverse-shell/: linux.c  reverse.elf  rsh.out  windows.c
Wrapper/: Readme.md  arch_analyzer.py  config.json  docker_integration.py  initial.py  monitor.bt  report_gui.py  test_docker_integration.sh  time_tester.py  wrapper.py  技术文档：轻量化 QEMU-user + eBPF 沙箱监控系统.md
Wrapper/analyzers/: AbnormalSignalHandling.py  AccessControl.py  CodeInjection.py  FilelessExecution.py  ForkBomb.py  InformationLeakage.py  MemoryCorruption.py  RaceCondition.py  Reconnaissance.py  ReverseShell.py  code_injection.py
Wrapper/malicious/: command_injection  command_injection.c  fileless_exe.c  forkbomb  forkbomb.c  privilege_escalation  privilege_escalation.c  reverse_shell  reverse_shell.c
Wrapper/test/: Makefile
Wrapper/test/basic_tests/: Makefile  test_reverse_shell
Wrapper/test/basic_tests/src/: test_code_injection.c  test_fileless_exe.c  test_info_leak.c  test_reverse_shell.c
Wrapper/test/juliet/: CWE121_s01  CWE36_s01  CWE400_s01  CWE78_s01  CWE78_s01_riscv64
Wrapper/test/results/: a.csv  a.py  draw.py  table.md  time_tester.py
Wrapper/test/src/: test_access_control.c  test_fileless_exe.c  test_forkbomb.c  test_mem_corruption.c  test_race_condition.c  test_recon.c  test_reverse_shell.c  test_signal_handler.c
Wrapper/test/suite/: execution_backdoor_adv  execution_backdoor_adv.c  execution_backdoor_adv_riscv64  memory_resource_adv  memory_resource_adv.c  recon_privesc_adv  recon_privesc_adv.c
Wrapper/test/tcp_shell/vsftpd-2.3.4/: Makefile  vsftpd  vsftpd.conf
Wrapper/test/tmp/: CWE23_s01  a  a.c
Wrapper/test/vsftpd/: mipsle_shell_met_reverse
our idea and document/: Analyzer_Document.md  Readme.md  Workflow Overview.md  轻量化 QEMU-user + eBPF 沙箱项目报告.md
our idea and document/wrapper 论文/: Wrapper.md
